versions/v2.8/modules/en/pages/integrations/longhorn/longhorn.adoc
= Cloud Native Storage with Longhorn

== Longhorn

Longhorn is an official https://cncf.io/[Cloud Native Computing Foundation project (CNCF)] project that delivers a powerful cloud-native distributed storage platform for Kubernetes that can run anywhere. When combined with Rancher, Longhorn makes the deployment of highly available persistent block storage in your Kubernetes environment easy, fast and reliable.

== Longhorn with Rancher

With Rancher Prime and Longhorn, users can easily deploy with 1-click via the Rancher catalog and conduct lifecycle management for managed clusters; empowering the user to install and upgrade, together with draining operation for graceful operations. Longhorn with Rancher also provides mixed cluster support with Windows, Rancher hosted images, UI Proxy access through Rancher, and Rancher monitoring with Longhorn metrics.
